test/files/neg/ambiguous-float-dots2.check
ambiguous-float-dots2.scala:7: error: Non-zero numbers may not have a leading zero.
  val y0 = 055
           ^
ambiguous-float-dots2.scala:3: error: identifier expected but '}' found.
}
^
ambiguous-float-dots2.scala:12: error: ';' expected but integer literal found.
  1. + 2
       ^
three errors found
